# dbt-py-test

./: .gitignore  .pre-commit-config.yaml  README.md  commands.sh  custom_module.py  dbt_project.yml  profiles.yml  pyproject.toml  requirements-dev.txt  requirements.txt
another_custom_package/: foo.py
custom_package/: __init__.py  greetings.py
pipeline/models/: schema.yml  stg__docs.sql  stg__events.sql  stg__users.sql
pipeline/seeds/: events.csv
